tests/sources/invalid/classes/super_call_errors.fire
// Invalid uses of this.super(...): no base class, base with no
// constructor, and wrong argument count/type when a base constructor
// does exist. All from within an actual constructor: `this.super(...)`
// called from a *regular* method (not a constructor) is a different
// beast entirely -- the parser only ever builds a SUPER_CALL AST node
// when already inside a constructor (see expressions.py's `in_ctor` gate
// on `this.super(...)`), so outside a constructor it's just a normal
// method call named "super" that gets rejected by the ordinary
// "Methods not supported for type X" check instead.

// No base class: cannot use super at all.
class Standalone {
    v: int32;

    fn Standalone(&mut this, v: int32) {
        this.super(v);  //~ ERROR FS-SEM-0010 @14
        this.v = v;
    }
}

// Base class exists but declares no constructor of its own.
class NoCtorBase {
    v: int32;
}

class NoCtorDerived from NoCtorBase {
    w: int32;

    fn NoCtorDerived(&mut this, w: int32) {
        this.super();  //~ ERROR FS-SEM-0010 @14
        this.w = w;
    }
}

class Base {
    v: int32;

    fn Base(&mut this, v: int32) {
        this.v = v;
    }
}

class WrongArgs from Base {
    w: int32;

    fn WrongArgs(&mut this, v: int32, w: int32) {
        this.super(v, w);  //~ ERROR FS-SEM-0010 @14
        this.w = w;
    }
}

class WrongType from Base {
    w: int32;

    fn WrongType(&mut this, v: string, w: int32) {
        this.super(v);  //~ ERROR FS-SEM-0010 @20
        this.w = w;
    }
}
